--- a/Pipfile
+++ b/Pipfile
@@ -8,27 +8,58 @@ verify_ssl = true
 [packages]
 beautifulsoup4 = "==4.8.*"
 bokeh = ">=2.0"
+chart_studio = "*"
 cloudpickle = "==1.5.*"
+colorama = ">=0.3.8"
 cython = "==0.29.*"
 dask = "*"
 dill = "==0.3.*"
 distributed = "*"
+flask = "*"
+flask_cors = "*"
+future = "*"
+gast = "*"
+gunicorn = "*"
 h5py = "==2.10.*"
+imutils = "*"
 ipywidgets = ">=7.5.0"
+joblib = "==0.16.0"
 jupyter-bokeh = "*"
 jupyter-tensorboard = "*"
-matplotlib = "==3.1.*"
-pandas = "==0.25.*"
-plotly = ">=4.5.0"
+Keras = "*"
+Keras-Applications = "*"
+Keras-Preprocessing = "*"
+kubernetes = "*"
+Markdown = "*"
+matplotlib = "*"
+minio = "*"
+mlflow = "==1.9.1"
+nbformat = ">=4.2.0"
+numpy = "*"
+opencv-python = "==4.1.2.30"
+openshift = "*"
+pandas = "*"
+pillow = "*"
+plotly = "*"
+protobuf = "==3.9.*"
+psycopg2-binary = "==2.8.5"
 pyarrow = "*"
+requests = "*"
+s3cmd = "*"
 s3fs = "*"
-scikit-image = "*"
-scikit-learn = "*"
-scipy = ">=1.3.*"
+scikit-image = "==0.15.*"
+scikit-learn = "==0.20.3"
+scipy = "*"
 seaborn = "*"
+seldon-core ="*"
 sqlalchemy = "==1.3.*"
 statsmodels = "==0.10.*"
-tensorflow = ">=2.0.0"
+tabulate = "*"
+tensorflow = "==2.2.0"
+tqdm = "*"
+xgboost = "==0.82"
+werkzeug = "*"
+wget = "*"
 
 [requires]
 python_version = "3.6"
