Updated Pipfile for tf==2.2

--- a/Pipfile
+++ b/Pipfile
@@ -55,7 +55,7 @@ seldon-core ="*"
 sqlalchemy = "==1.3.*"
 statsmodels = "==0.10.*"
 tabulate = "*"
-tensorflow-gpu = "==2.0.*"
+tensorflow = "==2.2.0"
 tqdm = "*"
 xgboost = "==0.82"
 werkzeug = "*"
