--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,4 @@
+  
 [[source]]
 name = "pypi"
 url = "https://pypi.org/simple"
@@ -55,7 +56,7 @@ seldon-core ="*"
 sqlalchemy = "==1.3.*"
 statsmodels = "==0.10.*"
 tabulate = "*"
-tensorflow-gpu = "==2.0.*"
+tensorflow = "==2.2.0"
 tqdm = "*"
 xgboost = "==0.82"
 werkzeug = "*"
