--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ verify_ssl = true
 
 [packages]
 beautifulsoup4 = "==4.8.*"
-bokeh = ">=2.0"
+bokeh = ">=2.0""
+catboost = "*"
 chart_studio = "*"
 cloudpickle = "==1.5.*"
 colorama = ">=0.3.8"
@@ -20,6 +21,7 @@ flask = "*"
 flask_cors = "*"
 future = "*"
 gast = "*"
+gensim = "*"
 gunicorn = "*"
 h5py = "==2.10.*"
 imutils = "*"
@@ -31,11 +33,13 @@ Keras = "*"
 Keras-Applications = "*"
 Keras-Preprocessing = "*"
 kubernetes = "*"
+lightgbm = "*"
 Markdown = "*"
 matplotlib = "*"
 minio = "*"
 mlflow = "==1.9.1"
 nbformat = ">=4.2.0"
+nltk = "*"
 numpy = "*"
 opencv-python = "==4.1.2.30"
 openshift = "*"
@@ -53,6 +57,7 @@ scikit-learn = "==0.20.3"
 scipy = "*"
 seaborn = "*"
 seldon-core ="*"
+spacy = "*"
 sqlalchemy = "==1.3.*"
 statsmodels = "==0.10.*"
 tabulate = "*"
