--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ future = "*"
 gast = "*"
 gensim = "*"
 gunicorn = "*"
-grpcio = "==1.34.1"
+grpcio = "*"
 h5py = "==2.10.*"
 imutils = "*"
 ipywidgets = ">=7.5.0"
