Updated Pipfile for Tf==2.4

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ future = "*"
 gast = "*"
 gensim = "*"
 gunicorn = "*"
+grpcio = ">=1.21.*"
 h5py = "==2.10.*"
 imutils = "*"
 ipywidgets = ">=7.5.0"
