Updated Pipfile for Tf==2.4

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ future = "*"
 gast = "*"
 gensim = "*"
 gunicorn = "*"
+grpcio-reflection= "==1.32.0"
+grpcio= "==1.32.0"
 h5py = "==2.10.*"
 imutils = "*"
 ipywidgets = ">=7.5.0"
