--- a/requirements.in
+++ b/requirements.in
@@ -22,10 +22,10 @@ scipy
 seaborn
 sqlalchemy
 statsmodels
-
+tornado
 ### tensorflow-notebook
 
-tensorflow==2.0.0
+tensorflow==2.2.0
 
 # extensions
 
