--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+tornado = ">=6.1.0"
 beautifulsoup4 = "==4.8.*"
 bokeh = ">=2.0"
 cloudpickle = "==1.5.*"
@@ -28,7 +29,7 @@ scipy = ">=1.3.*"
 seaborn = "*"
 sqlalchemy = "==1.3.*"
 statsmodels = "==0.10.*"
-tensorflow = ">=2.0.0"
+tensorflow = "==2.2.0"
 
 [requires]
 python_version = "3.6"
